# pjsocky

./: .gitignore  CMakeLists.txt  CONTEXT.md  CONTRIBUTING.md  README.md  cmake.local.example
.github/workflows/: ci.yml
docs/: CHANGELOG.md  PROTOCOL.md
packaging/: pjsocky.conf.sample  pjsocky.service
src/: account.c  account.h  call.c  call.h  device.c  device.h  im.c  im.h  main.c  null_video_dev.c
src/proto/: dispatch.c  dispatch.h  events.c  events.h  framing.c  framing.h  jsonutil.c  jsonutil.h  server.c  server.h
tests/asterisk/: Dockerfile  run_live_tests.py
tests/asterisk/etc/: asterisk.conf  extensions.conf  logger.conf  pjsip.conf  rtp.conf
tests/protocol/: client.py  test_basic.py  test_live_call.py
